--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,7 @@ beautifulsoup4
 fugashi[unidic-lite]
 tqdm
 python-dotenv
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.108.0
