--- a/.github/workflows/daily_rank.yml
+++ b/.github/workflows/daily_rank.yml
@@ -1,40 +1,70 @@
 name: Daily Rakuten Rank CSV
 on:
-  # ───────── 自動実行 ─────────
   schedule:
-    # 0 2 * * *  = UTC 02:00 → 日本時間 11:00
-    - cron: '0 2 * * *'
-  # ───────── 手動実行 ─────────
+    # 毎日1回（日本時間 朝9時）
+    - cron: '0 0 * * *'
   workflow_dispatch:
 
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
-      # ❶ リポジトリ取得
       - uses: actions/checkout@v4
       
-      # ❷ Python セットアップ
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
       
-      # ❸ 依存ライブラリをインストール
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
-          pip install google-auth google-auth-oauthlib google-auth-httplib2 google-api-python-client
+          pip install pandas
       
-      # ❹ ランキング CSV 生成 (Top 1000)
       - name: Run ranking script
         env:
           APP_ID: ${{ secrets.APP_ID }}
         run: python rakuten_rank_step1.py --pages 10
       
-      # ❺ Google Drive へアップロード（Pythonスクリプト使用）
-      - name: Upload CSV to Google Drive
-        env:
-          GDRIVE_JSON: ${{ secrets.GDRIVE_JSON }}
-          GDRIVE_FOLDER: ${{ secrets.GDRIVE_FOLDER }}
-        run: python upload_to_drive.py
+      - name: Organize CSV files
+        run: |
+          # dataフォルダを作成
+          mkdir -p data
+          
+          # 日本時間でタイムスタンプ取得
+          DATE=$(TZ='Asia/Tokyo' date +%Y-%m-%d)
+          TIME=$(TZ='Asia/Tokyo' date +%H-%M)
+          
+          # 生成されたCSVファイルを確認
+          echo "Generated CSV files:"
+          ls -la rank_base_*.csv
+          
+          # タイムスタンプ付きで保存
+          if ls rank_base_*.csv 1> /dev/null 2>&1; then
+            cp rank_base_*.csv data/rank_base_${DATE}.csv
+            cp rank_base_*.csv data/rank_base_latest.csv
+            echo "CSV files saved successfully"
+          else
+            echo "No CSV files found!"
+            exit 1
+          fi
+      
+      - name: Analyze ranking changes
+        run: |
+          echo "🔍 ランキング変化を分析中..."
+          python analyze_changes.py || echo "変化分析をスキップ（初回実行または比較データなし）"
+      
+      - name: Commit and push changes
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add data/
+          
+          # 変更があるかチェック
+          if git diff --staged --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "📊 Daily ranking update $(TZ='Asia/Tokyo' date +%Y-%m-%d)"
+            git push
+            echo "Data updated and pushed successfully"
+          fi
