--- a/.github/workflows/daily_rank.yml
+++ b/.github/workflows/daily_rank.yml
@@ -5,6 +5,10 @@ on:
     - cron: '0 0 * * *'
   workflow_dispatch:
 
+# GitHub Actions に書き込み権限を付与
+permissions:
+  contents: write
+
 jobs:
   run:
     runs-on: ubuntu-latest
@@ -65,6 +69,6 @@ jobs:
             echo "No changes to commit"
           else
             git commit -m "📊 Daily ranking update $(TZ='Asia/Tokyo' date +%Y-%m-%d)"
-            git push
+            git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
             echo "Data updated and pushed successfully"
           fi
