--- a/.github/workflows/daily_rank_with_images.yaml
+++ b/.github/workflows/daily_rank_with_images.yaml
@@ -1,4 +1,4 @@
-name: Daily Rakuten Rank CSV with Image Analysis
+name: Daily Rakuten Rank with Image Analysis (Fixed)
 on:
   schedule:
     # 毎日1回（日本時間 朝9時）
@@ -31,15 +31,48 @@ jobs:
         with:
           python-version: '3.11'
       
-      - name: Install system dependencies
+      - name: Install system dependencies (Fixed)
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgl1-mesa-glx libglib2.0-0 libsm6 libxext6 libxrender-dev libgomp1
+          # 画像処理用システム依存関係（エラー回避版）
+          sudo apt-get install -y \
+            libglib2.0-0 \
+            libsm6 \
+            libxext6 \
+            libxrender-dev \
+            libgomp1 \
+            libgstreamer1.0-0 \
+            libgstreamer-plugins-base1.0-0 \
+            libxcb-xinerama0 \
+            libfontconfig1-dev \
+            libfreetype6-dev
+          
+          # OpenCVの代替: libgl1-mesa-glxを避けてheadless版を使用
+          sudo apt-get install -y python3-opencv || echo "OpenCV system package skipped"
       
-      - name: Install Python dependencies
+      - name: Install Python dependencies (Image Analysis Ready)
         run: |
-          pip install -r requirements_with_images.txt
-          pip install pandas numpy pillow opencv-python scikit-learn matplotlib
+          pip install --upgrade pip
+          
+          # 基本依存関係
+          pip install pandas requests requests-cache beautifulsoup4 tqdm python-dotenv
+          
+          # 画像分析依存関係（GitHub Actions対応版）
+          pip install Pillow>=9.0.0
+          pip install numpy>=1.21.0
+          pip install matplotlib>=3.5.0
+          pip install scikit-learn>=1.1.0
+          pip install scipy>=1.8.0
+          
+          # OpenCV headless版（GUI依存なし）
+          pip install opencv-python-headless>=4.7.0
+          
+          # 色彩分析
+          pip install colorthief>=0.2.1
+          pip install webcolors>=1.12
+          
+          # Google Drive連携（オプション）
+          pip install google-auth==2.23.4 google-auth-oauthlib==1.1.0 google-auth-httplib2==0.1.1 google-api-python-client==2.108.0
       
       - name: Run ranking script with images
         env:
@@ -53,83 +86,57 @@ jobs:
             python rakuten_rank_step1.py --pages ${{ github.event.inputs.pages || '10' }}
           fi
       
-      - name: Run image analysis (if images available)
+      - name: Run image analysis (GitHub Actions optimized)
         run: |
           echo "🎨 画像分析実行中..."
-          python rascal_image_analyzer.py || echo "画像分析をスキップ（画像データなしまたはエラー）"
+          python rascal_image_analyzer_headless.py || echo "画像分析をスキップ（画像データなしまたはエラー）"
       
-      - name: Organize CSV files
+      - name: Organize files
         run: |
-          # dataフォルダを作成
           mkdir -p data
           mkdir -p data/images
           
-          # 日本時間でタイムスタンプ取得
           DATE=$(TZ='Asia/Tokyo' date +%Y-%m-%d)
-          TIME=$(TZ='Asia/Tokyo' date +%H-%M)
           
-          # 生成されたCSVファイルを確認
-          echo "Generated CSV files:"
-          ls -la rank_base_*.csv
+          echo "生成されたファイル確認:"
+          ls -la rank_base_*.csv image_analysis_*.json 2>/dev/null || echo "一部ファイルなし"
           
-          # タイムスタンプ付きで保存
+          # CSVファイル保存
           if ls rank_base_*_with_images.csv 1> /dev/null 2>&1; then
             cp rank_base_*_with_images.csv data/rank_base_${DATE}_with_images.csv
             cp rank_base_*_with_images.csv data/rank_base_latest_with_images.csv
-            echo "画像付きCSVファイルを保存しました"
+            echo "✅ 画像付きCSVファイル保存"
           elif ls rank_base_*.csv 1> /dev/null 2>&1; then
             cp rank_base_*.csv data/rank_base_${DATE}.csv
             cp rank_base_*.csv data/rank_base_latest.csv
-            echo "通常CSVファイルを保存しました"
-          else
-            echo "No CSV files found!"
-            exit 1
+            echo "✅ 通常CSVファイル保存"
           fi
           
-          # 画像分析結果があれば保存
+          # 画像分析結果保存
           if ls image_analysis_*.json 1> /dev/null 2>&1; then
             cp image_analysis_*.json data/images/
-            echo "画像分析結果を保存しました"
+            echo "✅ 画像分析結果保存"
           fi
       
-      - name: Analyze ranking changes
+      - name: Analyze changes
         run: |
-          echo "🔍 ランキング変化を分析中..."
-          python analyze_changes_with_images.py || echo "変化分析をスキップ（初回実行または比較データなし）"
-      
-      - name: Upload to Google Drive (Optional)
-        env:
-          GDRIVE_JSON: ${{ secrets.GDRIVE_JSON }}
-          GDRIVE_FOLDER: ${{ secrets.GDRIVE_FOLDER }}
-        run: |
-          if [ -n "$GDRIVE_JSON" ] && [ -n "$GDRIVE_FOLDER" ]; then
-            echo "📤 Google Driveにアップロード中..."
-            python upload_to_drive_with_images.py || echo "Google Driveアップロードをスキップ"
-          else
-            echo "Google Drive設定なし、ローカル保存のみ"
-          fi
-      
-      - name: Generate analysis report
-        run: |
-          echo "📊 RASCAL分析レポート生成中..."
-          python generate_rascal_report.py || echo "レポート生成をスキップ"
+          echo "🔍 ランキング変化分析中..."
+          python analyze_changes.py || echo "変化分析をスキップ（初回実行または比較データなし）"
       
       - name: Commit and push changes
         run: |
           git config --local user.email "rascal@github.com"
-          git config --local user.name "RASCAL 3.0 Bot"
+          git config --local user.name "RASCAL Bot"
           git add data/
           
-          # 変更があるかチェック
           if git diff --staged --quiet; then
-            echo "No changes to commit"
+            echo "変更なし"
           else
-            # 画像分析があったかチェック
             if ls data/images/*.json 1> /dev/null 2>&1; then
               git commit -m "🎨 Daily ranking update with image analysis $(TZ='Asia/Tokyo' date +%Y-%m-%d)"
             else
               git commit -m "📊 Daily ranking update $(TZ='Asia/Tokyo' date +%Y-%m-%d)"
             fi
             git push https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-            echo "Data updated and pushed successfully"
+            echo "✅ データ更新完了"
           fi
