--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+# ===================================================================
+# RASCAL TOP100 軽量化版 依存関係
+# 画像分析機能削除により大幅軽量化
+# ===================================================================
+
 # 基本依存関係
 streamlit
 pandas>=1.5.0
@@ -14,27 +19,5 @@ google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.1.1
 google-api-python-client==2.108.0
 
-# 🎨 画像分析用ライブラリ（RASCAL 3.0対応）
-Pillow>=9.0.0              # 画像処理基盤
-opencv-python>=4.7.0       # 画像解析・特徴抽出
-numpy>=1.21.0              # 数値計算
-matplotlib>=3.5.0          # 可視化
-seaborn>=0.11.0            # 統計的可視化
-scikit-learn>=1.1.0        # 機械学習（色彩クラスタリング等）
-scipy>=1.8.0               # 科学計算
-
-# 色彩分析特化
-colorthief>=0.2.1          # 主要色抽出
-webcolors>=1.12            # 色名変換
-colorspacious>=1.1.2       # 色空間変換
-
-# 画像品質・美的評価
-scikit-image>=0.19.0       # 画像品質メトリクス
-imageio>=2.19.0            # 画像I/O
-
-# 高速化・並列処理
-joblib>=1.1.0              # 並列処理
-numba>=0.56.0              # JITコンパイル（高速化）
-
-# GitHub Actions環境対応
-psutil>=5.9.0              # システムリソース監視
+# 数値計算（基本分析用）
+numpy>=1.21.0
